Apply suggestions from code review
Co-authored-by: Ryan <fauxpark@gmail.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: update formula
+name: Autocreate PR for QMK CLI updates
 on:
   schedule:
     - cron: '45 5 * * *'
@@ -12,8 +12,6 @@ jobs:
         with:
           # Required, custom GitHub access token with only the 'public_repo' scope enabled
           token: ${{secrets.QMK_BOT_TOKEN}}
-          # Optional, will create tap repo fork in organization
-          org: ORG
           # Bump all outdated formulae in this tap
           tap: qmk/homebrew-qmk
           # Bump only these formulae if outdated
