--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 jobs:
   test-bot:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
